--- a/package.json
+++ b/package.json
@@ -1,57 +1,33 @@
 {
-  "name": "ecommerce",
+  "name": "ecommerce-frontend_",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
-    "jsonconfig": "^0.3.0",
-    "lodash": "^4.17.21",
-    "mongodb": "^6.5.0",
-    "mongoose": "^8.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
-    "saas": "^1.0.0",
-    "sass": "^1.72.0",
-    "web-vitals": "^2.1.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev -p 4000",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@auth/mongodb-adapter": "^2.5.1",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "lodash": "^4.17.21",
+    "micro": "^10.0.1",
+    "mongoose": "^8.2.3",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-spinners": "^0.13.8",
+    "stripe": "^14.23.0",
+    "swiper": "^11.0.7"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "Group Milestone Project 3 (Final)",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
